Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,12 @@ trigger:
     include:
       - main
 
+# Gebruik de self-hosted agent
 pool:
-  vmImage: ubuntu-latest
+  name: Default
+  # Optioneel: specifiek deze agent forceren
+  demands:
+    - agent.name -equals MyLocalAgent
 
 steps:
   - script: echo "Trigger backend deploy on Render"
