fix: Development en production database scheiding

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -5,3 +5,5 @@ CLOUDINARY_API_KEY=238496688721598
 CLOUDINARY_API_SECRET=lAPLa2AQwpjIJXEnc5gTB3w4IsQ
 PORT=10000
 NODE_ENV=development
+
+ADMIN_PASSWORD=Anus123!
