--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:dev": "ts-node src/scripts/seed.ts",
+    "seed:prod": "ts-node src/scripts/seed-production.ts"
   },
   "keywords": [],
   "author": "",
